// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `<ArticleError />`;

exports[`2. an article with no headline falls back to use shortheadline 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <View />
        <View>
          <Text
            selectable={true}
          >
            Some Short Headline
          </Text>
        </View>
        <View>
          <View>
            <Text>
              Friday March 13 2015, 6:54pm, The Times
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <Text
          selectable={true}
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`3. an article with ads 1`] = `
<RCTScrollView
  initialNumToRender={10}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  scrollEventThrottle={50}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View>
      <View>
        <View />
        <View>
          <Text
            selectable={true}
          >
            Some Headline
          </Text>
        </View>
        <View>
          <View>
            <Text>
              Friday March 13 2015, 6:54pm, The Times
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="native-inline-ad"
      />
    </View>
    <View />
    <View>
      <ArticleComments
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        url="https://url.io"
      />
    </View>
  </View>
</RCTScrollView>
`;
